<resources>
    <string name="app_name">KexieBabbo</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="logoDescription">the logo of the CSTA</string>
    <string name="title_activity_bookshelf">activity_bookshelf</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="signin_disabled_message">你还没填写过正确id或你已经签到</string>
    <string name="signin_shortcut_short_name">签到</string>
    <string name="signin_shortcut_long_name">签到</string>

    <string name="signout_disabled_message">你似乎还没有签到</string>
    <string name="signout_shortcut_short_name">签退</string>
    <string name="signout_shortcut_long_name">签退</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
</resources>
