<shortcuts xmlns:android="http://schemas.android.com/apk/res/android">
    <shortcut
        android:enabled="true"
        android:icon="@drawable/ic_signin_blue_64dp"
        android:shortcutDisabledMessage="@string/signin_disabled_message"
        android:shortcutId="signIn"
        android:shortcutLongLabel="@string/signin_shortcut_long_name"
        android:shortcutShortLabel="@string/signin_shortcut_short_name">
        <intent
            android:action="android.intent.action.VIEW"
            android:targetClass="com.visualdust.kexiebabbo.shortcuts.SCRequestSignin"
            android:targetPackage="com.visualdust.kexiebabbo" />
        <!-- If your shortcut is associated with multiple intents, include them
             here. The last intent in the list determines what the user sees when
             they launch this shortcut. -->
        <categories android:name="android.shortcut.conversation" />
    </shortcut>
    <shortcut
        android:enabled="true"
        android:icon="@drawable/ic_signout_blue_64dp"
        android:shortcutDisabledMessage="@string/signout_disabled_message"
        android:shortcutId="signOut"
        android:shortcutLongLabel="@string/signout_shortcut_long_name"
        android:shortcutShortLabel="@string/signout_shortcut_short_name">
        <intent
            android:action="android.intent.action.VIEW"
            android:targetClass="com.visualdust.kexiebabbo.shortcuts.SCRequestSignout"
            android:targetPackage="com.visualdust.kexiebabbo" />
        <!-- If your shortcut is associated with multiple intents, include them
             here. The last intent in the list determines what the user sees when
             they launch this shortcut. -->
        <categories android:name="android.shortcut.conversation" />
    </shortcut>
</shortcuts>